@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.55 2006/03/23 22:16:31 sfeam Exp $
+ * $Id: tables.h,v 1.56 2006/03/26 20:00:26 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -159,6 +159,7 @@ enum set_pm3d_id {
     S_PM3D_AT,
     S_PM3D_INTERPOLATE,
     S_PM3D_SCANSFORWARD, S_PM3D_SCANSBACKWARD, S_PM3D_SCANS_AUTOMATIC,
+    S_PM3D_DEPTH,
     S_PM3D_FLUSH, S_PM3D_FTRIANGLES, S_PM3D_NOFTRIANGLES,
     S_PM3D_CLIP_1IN, S_PM3D_CLIP_4IN,
     S_PM3D_MAP, S_PM3D_HIDDEN, S_PM3D_NOHIDDEN,
